--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@
 }
 :root {
   --light-blue: #13afc5;
-  --color-rosa: #FF0080;
+  --color-rosa: #ff0080;
   --black: #030305;
   --petroleum: #0c373e;
   --gray: #373735;
@@ -316,30 +316,6 @@ main {
   border: none;
 }
 
-.genero {
-  margin-right: 10px;
-  border-radius: 15px;
-  height: 120px;
-}
-
-.calendario-boton-genero {
-  padding-top: 5px;
-  background-color: white;
-  height: 125px;
-  
-}
-.calendario-boton-genero .boton-genero {
-  padding: 0;
-  margin-left: 15px;
-  margin-right: 15px;
-  padding: 0 15px;
-  display: flex;
-  justify-content: center;
-  height: 30%;
-}
-
-
-
 /*Sec3*/
 .botones {
   margin-left: 30px;
@@ -363,7 +339,7 @@ main {
   display: grid;
   justify-items: center;
   align-items: center;
-  border-radius: 15px;	
+  border-radius: 15px;
 }
 
 /*Sec4*/
@@ -475,31 +451,27 @@ footer a:hover {
   text-decoration: none;
 }
 
-.botonesNuevos{
- display: flex;
- flex-wrap: wrap;
- margin-right: -15px;
- margin-left: -15px;
- row-gap: 20px; 
- margin-bottom: 20px;
+.botonesNuevos {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+  row-gap: 20px;
+  margin-bottom: 20px;
 }
 
-.btnNuevo{
+.btnNuevo {
   width: 83%;
   margin-left: 65px;
   border-radius: 10px;
-    border-color: var(--color-rosa) ;
-  color: var(--color-rosa) ;
+  border-color: var(--color-rosa);
+  color: var(--color-rosa);
 }
 
 .btnNuevo:hover {
   background-color: var(--color-rosa);
   color: white;
-  
 }
-
-
-
 
 /* Estilos responsivos */
 @media (max-width: 1024px) {
@@ -540,7 +512,7 @@ footer a:hover {
     width: 100%;
     margin-bottom: 20px;
   }
-  
+
   .top-nav ul {
     margin-right: 20px;
   }
@@ -563,5 +535,3 @@ footer a:hover {
     margin: 10px 0;
   }
 }
-
-
