--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@
 }
 :root {
   --light-blue: #13afc5;
-  --color-rosa: #ff0080;
+  --color-rosa: #FF0080;
   --black: #030305;
   --petroleum: #0c373e;
   --gray: #373735;
@@ -266,6 +266,7 @@ main {
   display: flex;
   font-size: var(--md);
   margin-bottom: 40px;
+  margin-top: 45px;
   padding: 5px;
   background-color: white;
   border-radius: 12px;
@@ -274,7 +275,7 @@ main {
 .ultimas-novedades {
   background-color: white;
   color: var(--black);
-  padding: 20px 30px 0 40px;
+  padding: 20px 60px 0 60px;
   text-align: left;
   vertical-align: top;
 }
@@ -316,6 +317,49 @@ main {
   border: none;
 }
 
+.genero {
+  margin-right: 50px;
+  margin-left: 20px;
+  border-radius: 15px;
+  height: 120px;
+}
+
+.censo {
+  
+  border-radius: 15px;
+  height: 120px;
+}
+
+
+
+.calendario-boton-genero {
+  padding-top: 5px;
+  background-color: white;
+  height: 125px;  
+}
+
+.calendario-boton-genero .boton-genero {
+  padding: 0;
+  margin-left: 40px;
+  margin-right: 40px;
+  padding: 0 15px;
+  display: flex;
+  justify-content: center;
+  height: 30%;
+}
+
+.calendario-boton-genero .boton-censo{
+  display: flex;
+  justify-content: center;
+  height: 30%;
+  
+  margin-left: 50px;
+  margin-right: 30px;
+  padding: 0 15px;
+}
+
+
+
 /*Sec3*/
 .botones {
   margin-left: 30px;
@@ -339,7 +383,7 @@ main {
   display: grid;
   justify-items: center;
   align-items: center;
-  border-radius: 15px;
+  border-radius: 15px;	
 }
 
 /*Sec4*/
@@ -451,55 +495,30 @@ footer a:hover {
   text-decoration: none;
 }
 
-.botonesNuevos {
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
-  row-gap: 20px;
-  margin-bottom: 20px;
+.botonesNuevos{
+ display: flex;
+ flex-wrap: wrap;
+ margin-right: -15px;
+ margin-left: -15px;
+ row-gap: 20px; 
+ margin-bottom: 20px;
 }
 
-.btnNuevo {
-  width: 88%;
-  margin-left: 3px;
+.btnNuevo{
+  width: 83%;
+  margin-left: 65px;
   border-radius: 10px;
-  border-color: var(--color-rosa);
-  color: var(--color-rosa);
+    border-color: var(--color-rosa) ;
+  color: var(--color-rosa) ;
 }
 
 .btnNuevo:hover {
   background-color: var(--color-rosa);
   color: white;
+  
 }
 
-/* Estilos responsivos */
-@media (max-width: 1024px) {
-  .main-container {
-    flex-direction: column;
-    align-items: center;
-  }
 
-  .card {
-    width: 80%;
-    margin-bottom: 20px;
-  }
-
-  main {
-    grid-template-columns: 1fr;
-    padding: 0 20px;
-  }
-
-  .botones {
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(8, auto);
-  }
-
-  .bottom-nav ul {
-    flex-direction: column;
-    align-items: center;
-  }
-}
 
 /* Estilos específicos para pantallas pequeñas */
 @media (max-width: 768px) {
@@ -508,11 +527,26 @@ footer a:hover {
     align-items: center;
   }
 
+  .hacienda{
+    margin-top: 10px;
+  }
+
+  .bottom-nav ul{
+    align-items: center;
+  }
+
   .card {
     width: 100%;
     margin-bottom: 20px;
   }
 
+  main {
+    grid-template-columns: 1fr;
+    padding: 0 20px;
+  }
+  .bottom-nav{
+    height: 15vw;
+  }
   .top-nav ul {
     margin-right: 20px;
   }
@@ -522,16 +556,106 @@ footer a:hover {
     padding: 10px;
   }
 
-  .iframe-calendar {
-    height: 300px;
+  .Calendar {
+    height: 600px;
   }
 
   .genero {
     height: 100px;
   }
 
+  .censo{
+    height: 100px;
+
+  }
+
   .btnNuevo {
     width: 100%;
     margin: 10px 0;
+  }
+
+  .botones{
+    margin-left: 10px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  footer {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(5, auto);
+    grid-template-areas:
+        'a'
+        'b'
+        'c'
+        'd'
+        'e';
+    text-align: center;
+}
+
+footer div {
+    padding-left: 0;
+}
+
+
+footer .columna-2,
+footer .columna-3 {
+    margin-right: 0;
+    padding-right: 0;
+}
+
+footer .columna-1{
+  text-align: center;
+  margin-left: 100px;
+}
+
+footer ul {
+    text-align: center;
+}
+
+
+
+.w-screen{
+  width: 100%;
+  height: 100%;
+}
+
+.prensa{
+  flex-direction: column;
+  align-items: center;
+  width: 500px;
+}
+
+.imagenPrensa{
+  margin-bottom: 2rem;
+}
+
+.text-\[1vw\]{
+  font-size: 2vw;
+}
+
+}
+
+
+
+/* Estilos específicos para notebooks (1025px - 1440px) */
+@media (min-width: 1025px) and (max-width: 1440px){
+
+  .ultimas-novedades .card {
+    margin-top: 10px;
+    margin-bottom: 26px;
+  }
+
+  .botonesNuevos{
+    margin-right: 6px;
+  }
+
+  .calendario-boton-genero .boton-genero {
+    margin-left: 45px;
+    margin-right: 20px;
+  }
+
+  .calendario-boton-genero .boton-censo {
+    margin-left: 40px;
+    margin-right: 40px;
   }
 }
